Mise à jour fondements.

--- a/1. Fondements.tex
+++ b/1. Fondements.tex
@@ -193,15 +193,12 @@ Soit $\bx = (x_1, x_2, \ldots, x_n)$ une solution optimale réalisable, et comme
 
 \mbox{}
 
-On peut distinguer à nouveau deux cas.
-
-\mbox{}
-
-Le cas 1, correspondant à l'indépendance linéaire, se traite comme pour la question de réalisabilité.
-
-\mbox{}
-
-Le cas 2 procède également de manière similaire à la réalisabilité, à ceci près que nous devons montrer que pour n'importe quel $\epsilon$, la solution $x-\epsilon y$ est optimale.
+À nouveau deux cas.
+\begin{description}
+\item[Cas 1:] correspond à l'indépendance linéaire, et se traite comme pour la question de réalisabilité.
+\item[Cas 2:]
+similaire à la réalisabilité, à ceci près que nous devons montrer que pour n'importe quel $\epsilon$, la solution $x-\epsilon y$ est optimale.
+\end{description}
 
 \end{frame}
 
@@ -329,7 +326,7 @@ Nombre de sous-matrices carrées 2 par 2:
 $$
 \frac{4!}{2!2!} = 6
 $$
-Le nombre de base est toutefois strictement plus petit puisqu'il y a forcément des colonnes linéairement dépendantes.
+Le nombre de bases est toutefois strictement plus petit puisqu'il y a forcément des colonnes linéairement dépendantes.
 
 \end{frame}
 
