--- a/0. Intro.tex
+++ b/0. Intro.tex
@@ -92,7 +92,7 @@ Notebooks: \url{https://github.com/fbastin/optim};
 \item
 Slides: \url{https://github.com/fbastin/LP_Introduction};
 \item
-Canal discord: \url{https://discord.gg/Z4ZU6P8K}.
+Canal discord: \url{https://discord.gg/j7FBs9V6}.
 \end{itemize}
 
 \end{frame}
