Mise à jour de 2. Simplexe.

--- a/2. Simplexe.tex
+++ b/2. Simplexe.tex
@@ -1347,7 +1347,7 @@ Potentiel problème de cycles, car il n'y a pas forcément réduction de la fonc
 	\[
 	\begin{matrix}
 		\ba_1 & \ba_2 & \ba_3 & \ba_4 & \ba_5 &\ba_6 &\ba_7 & \bb \\
-		1 & 0 & \frac{8}{25} & -84 & -12 & 8 & 0 & 0 \\
+		1 & 0 & \circled{$\frac{8}{25}$} & -84 & -12 & 8 & 0 & 0 \\
 		0 & 1 & \frac{1}{500} & -\frac{1}{2} & -\frac{1}{15} & \frac{1}{30} & 0 & 0 \\
 		0 & 0 & 1 & 0 & 0 & 0 & 1 & 1 \\
 		0 & 0 & -\frac{2}{25} & 18 & 1 & 1 & 0 & 0
@@ -1537,7 +1537,7 @@ Potentiel problème de cycles, car il n'y a pas forcément réduction de la fonc
 	\[
 	\begin{matrix}
 		\ba_1 & \ba_2 & \ba_3 & \ba_4 & \ba_5 &\ba_6 &\ba_7 & \bb \\
-		1 & 0 & \frac{8}{25} & -84 & -12 & 8 & 0 & 0 \\
+		1 & 0 & \circled{$\frac{8}{25}$} & -84 & -12 & 8 & 0 & 0 \\
 		0 & 1 & \frac{1}{500} & -\frac{1}{2} & -\frac{1}{15} & \frac{1}{30} & 0 & 0 \\
 		0 & 0 & 1 & 0 & 0 & 0 & 1 & 1 \\
 		0 & 0 & -\frac{2}{25} & 18 & 1 & 1 & 0 & 0
