Mise à jour transparents dualité.

--- a/0. Intro.tex
+++ b/0. Intro.tex
@@ -82,7 +82,8 @@ Aspects numériques de la PL (utilisation de Julia).
 
 \mbox{}
 
-Démonstrateur: Jean Laprés-Chartrand\\
+Démonstrateur:\\
+ Jean Laprés-Chartrand (\url{jl_chartrand@hotmail.com})\\
 
 \mbox{}
 
