Update the Discord link.

--- a/0. Intro.tex
+++ b/0. Intro.tex
@@ -93,7 +93,7 @@ Notebooks: \url{https://github.com/fbastin/optim};
 \item
 Slides: \url{https://github.com/fbastin/LP_Introduction};
 \item
-Canal discord: \url{https://discord.gg/j7FBs9V6}.
+Canal discord: \url{https://discord.gg/Ehz38mDqG7}.
 \end{itemize}
 
 \end{frame}
