Mise à jour variables artificielles.

--- a/3. Variables Artificielles.tex
+++ b/3. Variables Artificielles.tex
@@ -5,7 +5,7 @@
 % \setbeamercovered{transparent}
 %\usecolortheme{crane}
 
-\title[IFT2505]{IFT 2505\\Programmation Linéaire\\Variables artificielles}
+\title[Variables artificielles]{Programmation Linéaire\\Variables artificielles}
 \author[Fabian Bastin]{Fabian Bastin\\DIRO\\Université de Montréal}
 \date{}
 
@@ -47,7 +47,7 @@ Comment trouver cette solution de base initiale?
 	identifier les variables isolées;
 	\item
 compléter en introduisant des variables artificielles.
-\end{itemize}:
+\end{itemize}
 
 \end{frame}
 
