Mise à jour Forme Matricielle et Dualité.

--- a/4. Forme Matricielle.tex
+++ b/4. Forme Matricielle.tex
@@ -4,7 +4,7 @@
 \usepackage{xcolor}
 % \setbeamercovered{transparent}
 %\usecolortheme{crane}
-\title[IFT2505]{IFT 2505\\Programmation Linéaire\\Simplexe: forme matricielle -- dictionnaires}
+\title[Simplexe révisé]{Programmation Linéaire\\Simplexe: forme matricielle -- dictionnaires}
 \author[Fabian Bastin]{Fabian Bastin\\DIRO\\Université de Montréal}
 \date{}
 
