--- a/5. Dualite.tex
+++ b/5. Dualite.tex
@@ -6,7 +6,7 @@
 
 % \setbeamercovered{transparent}
 %\usecolortheme{crane}
-\title[IFT2505]{IFT 2505\\Programmation Linéaire\\Dualité}
+\title[Dualité]{Programmation Linéaire\\Dualité}
 \author[Fabian Bastin]{Fabian Bastin\\DIRO\\Université de Montréal\\}
 \date{}
 
