Introduction aux points intérieurs.

--- a/7. Points Interieurs.tex
+++ b/7. Points Interieurs.tex
@@ -376,7 +376,7 @@ Réalisabilité primale: $b - Ax + u = 0$;
 \item
 Réalisabilité duale: $c - A^T\lambda - t = 0$;
 \item
-Ecart de dualité: $b^T \lambda - c^Tx = 0$.
+Écart de dualité: $b^T \lambda - c^Tx = 0$.
 \end{itemize}
 
 \mbox{}
